@@ -1,3 +1,8 @@
+Sep 11, 2010: libphonenumber-5.1.2
+* Bug fix:
+ - Fixing regression in AsYouTypeFormatter where it no longer worked for numbers entered in national
+   format for countries with no national prefix, e.g. Spain.
+
 Sep 5, 2010: libphonenumber-5.1.1
 * Code changes:
   - Added better logging/exception handling for catching cases where metadata is invalid/missing.
